wrong color in ios fix

--- a/src/components/EditItem.css
+++ b/src/components/EditItem.css
@@ -75,3 +75,21 @@
 
   grid-area: 2 / 2 / -1 / -1;
 }
+
+/* wrong color in ios fix */
+.button-stack__edit button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.3em 1em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
+  color: white;
+}
